--- a/Timer.html
+++ b/Timer.html
@@ -7,12 +7,16 @@
 </head>
 <body>
     
+    <!--create an area to display the countdown-->
     <div id="timer">
         100
     </div>
     
+     <!--make a button to reset the timer
+    make sure you have a id to reference in js  -->
     <button id="reset">Reset</button>
 
+    <!-- make a start button make an id to ref in js -->
     <button id="startAGAIN">Start</button>
 
     <script type ="text/javascript" src="timer.js">
