sweet baby walrus I got the take away to work!!! now to convert from buttons to real app...

--- a/Timer.html
+++ b/Timer.html
@@ -19,8 +19,9 @@
     <!-- make a start button make an id to ref in js -->
     <button id="startAGAIN">Start</button>
 
-    <script type ="text/javascript" src="timer.js">
-    
-    </script>
+    <!-- make a take away button -->
+    <button id="takeAway">Take 2 away</button>
+
+    <script type ="text/javascript" src="timer.js"></script>
 </body>
 </html>
