Adding html code for controls

--- a/Timer.html
+++ b/Timer.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     
     <!--create an area to display the countdown-->
     <div id="timer">
@@ -22,6 +22,20 @@
     <!-- make a take away button -->
     <button id="takeAway">Take 2 away</button>
 
+
+  <!-- need to add a dynamic questionaire of buttons or divs 
+       maybe its a button to submitt the answer so the user has 
+       a chance/time to change mind-->
+       <p id="question"></p>
+       <input type="radio" id="q1" name="q1" value="">
+       <label for="q1"></label><br>
+       <input type="radio" id="q2" name="q2" value="">
+       <label for="q2"></label><br>  
+       <input type="radio" id="q3" name="q3" value="">
+       <label for="q3"></label><br><br>
+       <button  id ="butSubmit" value="Submit">
+
+
     <script type ="text/javascript" src="timer.js"></script>
-</body>
+  </body>
 </html>
