figured out indexnum is literally the most important thing i have..

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
       margin: auto;
       padding: 10px;
     }
+    #but, #start{
+      border-radius: 10px;
+      background-color: blue;
+      color: #f4f4f4;
+      width: 20%;
+    }
     .flex-parent{
       display: flex;
     }
@@ -56,7 +62,16 @@
       <button id="start">START</button>
       <button id="but">Submit</button>
     </div>
-     <!--make a button to reset the timer
+    
+    <div id="name">
+      
+    </div>
+
+    <script type ="text/javascript" src="timer.js"></script>
+  </body>
+</html>
+
+<!--make a button to reset the timer
     make sure you have a id to reference in js  -->
     <!--button id="reset">Reset</button>-->
 
@@ -65,8 +80,3 @@
 
     <!-- make a take away button -->
     <!--button id="takeAway">Take 2 away</button>-->
-  
-
-    <script type ="text/javascript" src="timer.js"></script>
-  </body>
-</html>
